Rename the Module

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 deployment/
 *.bak
 *.lock
+.mendix-cache/
+/*.launch
+/deployment/
+/packages/
+/releases/
+/.mendix-cache/
+/.classpath
+/.project
+/wordle-game.mpr.bak
+/wordle-game.mpr.lock
+/modeler-merge-marker
+/project-settings.user.json
+/javasource/*/proxies/
+/javasource/system/
+/**/node_modules/
+!/javascriptsource/**/node_modules/
+/nativemobile/builds/
